Updated CustomUserDetailsService to convert the user role into a GrantedAuthority